fixed delete phone number

--- a/KnockoutLiveExamples/09-ContactsEditor/ContactsEditor/client/src/main/webapp/pages/index.html
+++ b/KnockoutLiveExamples/09-ContactsEditor/ContactsEditor/client/src/main/webapp/pages/index.html
@@ -27,7 +27,7 @@
                                     <tr>
                                         <td><input data-bind='value: type' /></td>
                                         <td><input data-bind='value: number' /></td>
-                                        <td><a href='#' data-bind='click: $root.removePhone'>Delete</a></td>
+                                        <td><a href='#' data-bind='click: $parent.removePhone'>Delete</a></td>
                                     </tr>
                                 </tbody>
                             </table>
