--- a/KnockoutLiveExamples/08-AnimatedTransitions/client/src/main/webapp/pages/index.html
+++ b/KnockoutLiveExamples/08-AnimatedTransitions/client/src/main/webapp/pages/index.html
@@ -3,7 +3,6 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
         <style type="text/css">
             body { font-family: arial; font-size: 14px; }
             .liveExample { padding: 1em; background-color: #EEEEDD; border: 1px solid #CCC; max-width: 655px; }
@@ -16,8 +15,9 @@
             .liveExample select[multiple] { width: 100%; height: 8em; }
             .liveExample h2 { margin-top: 0.4em; }
 
-            .planet { background-color: #AAEECC; padding: 0.25em; border: 1px solid silver; margin-bottom: 0.5em; font-size: 0.75em;    }
+            .planet { font-size: 0.75em; height: 0; opacity: 0; background-color: #AAEECC;padding: 0; margin:0; transition: opacity 0.5s linear, height 0.1s 0.5s linear, margin 0.1s 0.5s linear, padding 0.1s 0.5s linear;}
             .planet.rock { background-color: #EECCAA; }
+            .planet.fadein{ opacity: 1; height: 1em; transition: height 0.1s linear, opacity 0.5s 0.1s linear; padding: 0.25em; border: 1px solid silver; margin-bottom: 0.5em; font-size: 0.75em; }
             .liveExample input { margin: 0 0.3em 0 1em; }
 
             li { list-style-type: disc; margin-left: 20px; }
@@ -44,8 +44,8 @@
                 <label><input type='radio' name="type" value='gasgiant' data-bind='checked: typeToShow' />Gas giants</label>
             </p>
 
-            <div data-bind='template: { foreach: planetsToShow }' >
-                <div data-bind='attr: { "class": "planet " + type() }, text: name, css: "fadeIn"'> </div>
+            <div data-bind='template: { foreach: planets }' >
+                <div data-bind='attr: { "class": "planet " + type() }, text: name, css: {fadein: $parent.typeToShow()===type()||$parent.typeToShow()==="all"}'> </div>
             </div>
 
             <p data-bind='fadeVisible: displayAdvancedOptions'>
